# goit-ds-hw-03

mongoDB_task_1/: main.py  pyproject.toml
scrapping_site_task_2/: main.py  pyproject.toml
